Added Genealogy Program
- Currently just used for testing of Tadukoo Util stuff (since it's been
separated from KBWCO and we don't have a simple project at the moment
for it) - Basically Tadukoo Genealogy will likely be the first program
to use the completed (Alpha v.0.1) Tadukoo Util / Tadukoo Engine
- Changed parent pom to include artifactId and groupId for Tadukoo Util
stuff, and added Tadukoo View stuff to the pom - and of course changed
the modules to use these

--- a/GenealogyAPI/pom.xml
+++ b/GenealogyAPI/pom.xml
@@ -11,8 +11,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.gmail.realtadukoo.util</groupId>
-			<artifactId>TadukooFileFormat</artifactId>
+			<groupId>${tadukoo.util.groupId}</groupId>
+			<artifactId>${tadukoo.util.fileformat.artifactId}</artifactId>
 			<version>${tadukoo.util.fileformat.version}</version>
 		</dependency>
 	</dependencies>
