--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -10,10 +11,21 @@
 	<modules>
 		<module>DocGenerator</module>
 		<module>GenealogyAPI</module>
+		<module>GenealogyProgram</module>
 	</modules>
 	<properties>
+		<tadukoo.util.groupId>com.gmail.realtadukoo.util</tadukoo.util.groupId>
+
+		<tadukoo.util.artifactId>TadukooUtil</tadukoo.util.artifactId>
 		<tadukoo.util.version>0.1-Alpha-SNAPSHOT</tadukoo.util.version>
+
+		<tadukoo.util.database.artifactId>TadukooDatabase</tadukoo.util.database.artifactId>
 		<tadukoo.util.database.version>${tadukoo.util.version}</tadukoo.util.database.version>
+
+		<tadukoo.util.fileformat.artifactId>TadukooFileFormat</tadukoo.util.fileformat.artifactId>
 		<tadukoo.util.fileformat.version>${tadukoo.util.version}</tadukoo.util.fileformat.version>
+
+		<tadukoo.util.view.artifactId>TadukooView</tadukoo.util.view.artifactId>
+		<tadukoo.util.view.version>${tadukoo.util.version}</tadukoo.util.view.version>
 	</properties>
 </project>
