--- a/DocGenerator/pom.xml
+++ b/DocGenerator/pom.xml
@@ -8,7 +8,6 @@
 		<version>0.1-Alpha-SNAPSHOT</version>
 	</parent>
 	<artifactId>DocGenerator</artifactId>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -31,15 +30,15 @@
 			<version>${tadukoo.util.version}</version>
 		</dependency>
 	</dependencies>
-
 	<build>
+		<sourceDirectory>${directory.source}</sourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.source.version}</source>
+					<target>${java.target.version}</target>
 				</configuration>
 			</plugin>
 		</plugins>
