--- a/GenealogyProgram/pom.xml
+++ b/GenealogyProgram/pom.xml
@@ -10,7 +10,6 @@
 		<version>0.1-Alpha-SNAPSHOT</version>
 	</parent>
 	<artifactId>GenealogyProgram</artifactId>
-
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
@@ -23,14 +22,14 @@
 			<version>${tadukoo.util.view.version}</version>
 		</dependency>
 	</dependencies>
-
 	<build>
+		<sourceDirectory>${directory.source}</sourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>${java.source.version}</source>
+					<target>${java.target.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
