--- a/GenealogyAPI/pom.xml
+++ b/GenealogyAPI/pom.xml
@@ -3,16 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.gmail.realtadukoo.genealogy</groupId>
+		<groupId>com.github.tadukoo.genealogy</groupId>
 		<artifactId>genealogy-parent</artifactId>
 		<version>0.1-Alpha-SNAPSHOT</version>
 	</parent>
 	<artifactId>GenealogyAPI</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>${tadukoo.util.groupId}</groupId>
-			<artifactId>${tadukoo.util.fileformat.artifactId}</artifactId>
-			<version>${tadukoo.util.fileformat.version}</version>
+			<groupId>${tadukoo.util.groupID}</groupId>
+			<artifactId>${tadukoo.util.fileformat.artifactID}</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
