--- a/GenealogyProgram/pom.xml
+++ b/GenealogyProgram/pom.xml
@@ -16,10 +16,9 @@
 			<artifactId>GenealogyAPI</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<!-- TODO: Remove OldTadukooView -->
 		<dependency>
-			<groupId>com.github.tadukoo.util</groupId>
-			<artifactId>OldTadukooView</artifactId>
+			<groupId>com.github.tadukoo.engine</groupId>
+			<artifactId>TadukooEngine</artifactId>
 			<version>0.1-Alpha-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
@@ -31,27 +30,6 @@
 				<configuration>
 					<source>${java.source.version}</source>
 					<target>${java.target.version}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>com.github.tadukoo.genealogy.program.TadukooGenealogy</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
 				</configuration>
 			</plugin>
 		</plugins>
